# visionresult

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  Makefile  OPTIMIZATION_REPORT.md  README.md  UI_OPTIMIZATION_REPORT.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.conf.prod  pyproject.toml
.claude/hooks/: inject-subagent-context.py  inject-workflow-state.py  session-start.py
.github/workflows/: deploy.yml  quality-gate.yml
.trellis/: config.yaml  workflow.md
.trellis/scripts/: add_session.py  get_context.py  init_developer.py  task.py  trellis-idle-explorer.py
.trellis/scripts/common/: __init__.py  active_task.py  config.py  developer.py  git_context.py  io.py  packages_context.py  paths.py  session_context.py  task_context.py  task_queue.py  task_store.py  task_utils.py  types.py  workflow_phase.py
.trellis/spec/: check-quick.md
.trellis/spec/backend/: index.md  quality-guidelines.md  testing-roadmap.md  testing-strategy.md
.trellis/spec/guides/: deployment-guide.md  index.md
.trellis/tasks/05-21-visual-insight-agent/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/05-23-arch-auto-db-url/: prd.md  task.json
.trellis/tasks/05-23-arch-auto-debt-cleanup-r2/: prd.md  task.json
.trellis/tasks/05-23-arch-auto-explore/: task.json
.trellis/tasks/05-23-arch-auto-explore/research/: REPORT.md  new-findings.md
.trellis/tasks/05-23-arch-auto-idle-explore-2/research/: arch-findings.md
.trellis/tasks/05-23-arch-auto-idle-explore/research/: REPORT.md  arch-findings.md  new-findings.md
.trellis/tasks/05-23-arch-auto-images-dir/: task.json
.trellis/tasks/05-23-arch-auto-scan-r2/: task.json
.trellis/workspace/yuanzhi/: index.md
data/: vision_insight.db
data/uploads/: .gitkeep
docs/: CLOUDFLARE_DEPLOYMENT.md  DEPLOYMENT.md  DEVELOPMENT.md  PRODUCTION_DEPLOYMENT.md  deployment-report.md  online-test-analysis.md  online-test-issues.md  pipeline-trace-feature.md  type-governance.md  verification-report.md
frontend/: index-old.html  index.html  preview.sh  schema.sql  wrangler.toml
frontend/deploy/: _worker.js  index.html
frontend/deploy/functions/api/: test.js
frontend/deploy/functions/api/report/: [task_id].js
frontend/deploy/src/css/: pages.css  toast.css  tokens.css
frontend/deploy/src/js/: app.js
frontend/functions/api/: analyze.js
frontend/public/: index-old.html  index.html
frontend/public/src/css/: base.css  events.css  report.css  upload.css
frontend/public/src/js/: app.js  state.js  toast.js
frontend/src/js/: i18n.js
frontend/worker-build/: worker.js  wrangler.toml
frontend/worker-build/public/: index.html
research/: arch-findings.md  architecture-deepening.md  architecture-findings.md  code-quality-audit.md  refactoring-report.md
scripts/: benchmark.py  demo_pipeline_trace.py  deploy.sh  docker-run.sh  eval-tests.py  health-check.sh  init-ssl.sh  install-hooks.sh  migrate-to-postgres.py  pre-commit  pre-deploy-guard.sh  setup-cloudflare.sh  test-qa-check.sh
src/vision_insight/: __init__.py  main.py
src/vision_insight/api/: health.py  routes.py
src/vision_insight/core/: adapters.py  auth.py  config.py  database.py  event_logger.py  rate_limiter.py  request_id.py  sanitizer.py  service_registry.py
src/vision_insight/models/: schemas.py
src/vision_insight/pipeline/: __init__.py  graph.py  node_decorator.py  runner.py
src/vision_insight/services/: __init__.py  fallback.py
src/vision_insight/services/entity/: __init__.py  llm_entity_service.py
src/vision_insight/services/evidence/: __init__.py  fusion_service.py  llm_ports.py
src/vision_insight/services/ocr/: baidu_service.py  paddle_service.py  tesseract_service.py
src/vision_insight/services/report/: __init__.py  markdown_report_service.py
src/vision_insight/services/search/: __init__.py  http_search_service.py
src/vision_insight/services/vlm/: __init__.py  api_service.py  base.py  prompts.py  zhipu_service.py
src/vision_insight/utils/: __init__.py  chat_client.py  image.py  json_helpers.py  retry.py  scene_builders.py
tests/: __init__.py  conftest.py  test_api.py  test_pipeline_trace.py
tests/e2e/: test_frontend.py
tests/evaluation/: agent_evaluator.py  assertions.py  golden_examples.py  llm_judge.py  test_agent_evaluator.py  test_evaluators.py
tests/integration/: test_pipeline.py  test_pipeline_e2e.py
tests/mocks/: __init__.py  fixtures.py  mock_services.py
tests/quality/: test_quality_guard.py
tests/unit/: test_database.py  test_edge_cases.py  test_image_utils.py  test_json_helpers.py  test_retry.py  test_scene_builders.py
tests/unit/api/: test_routes.py
tests/unit/core/: test_auth.py  test_event_logger.py  test_rate_limiter.py  test_request_id.py  test_sanitizer.py  test_service_registry.py
tests/unit/pipeline/: test_runner.py
tests/unit/services/: conftest.py  test_baidu_ocr.py  test_entity.py  test_evidence.py  test_fallback.py  test_i18n_report.py  test_ocr.py  test_report.py  test_search.py  test_vlm.py  test_vlm_lang.py
(+105 files in other folders)
