[project]
name = "vision-insight"
version = "0.1.0"
description = "Visual Insight Agent - 多模态图片分析系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "pillow>=10.0",
    "opencv-python-headless>=4.9",
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "spacy>=3.7",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-html>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]
vlm-local = [
    "torch>=2.3",
    "transformers>=4.40",
    "accelerate>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:schemathesis"

[tool.coverage.run]
source = ["src/vision_insight"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
default_precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "\.\.\.\s*$",
]
